--- a/chic/style_chic.css
+++ b/chic/style_chic.css
@@ -94,27 +94,21 @@ h1 {
     margin-top: 20px;  
 }
 
+section
+ {
+     margin: 0px 50px 100px 50px;
+ }
+
 .prix
 {
     display:flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-left: 75px;
-    margin-right: 75px;
-    font-size: 26px;
-}
-
-#dessert
-{
-    margin-left: 75px;
-    margin-right: 75px;
-    font-size: 26px;
 }
 
 h2
 {
-    display: flex;
-    justify-content: center;  
+    text-align: center;  
     width: 700px;
     height: 100px;
     font-size: 65px;
@@ -138,18 +132,41 @@ h2
 {
     color: #6E4CCC;
 }
-
+/*
 h3:hover
 {
     text-decoration:underline;
 }
-
+*/
 h3
-{
-    text-align:center;
-    font-size: 30px;
+{  
+    font-size: 40px;  
 }
 
+/*----------------TEST TRAIT-------------------*/
+/*
+#test p
+{
+    border: 1px solid black;
+    height: 100px;
+    margin-top: 0px;
+    -webkit-animation: anim 4s 500ms infinite normal ease-out forwards;
+    animation: anim 4s 500ms infinite normal ease-out forwards;
+  }
+  
+  @-webkit-keyframes anim{
+  0% {width: 0px;}
+  100% {width: 250px;}
+  }
+  
+  @keyframes anim{
+  0% {width: 0px;}
+  100% {width: 250px;}
+  }
+
+*/
+
+/*----------------TEST TRAIT-------------------*/
 #appetit, #plaisir,
 #gourmandise
 {
@@ -161,16 +178,23 @@ h3
 hr
 {
     border: 3px solid;
-    width: 225px;
-    margin-left: 75px;
-    margin-right: 75px;
+    width: 200px;
+    margin-left: 50px;
+    margin-right: 50px;
 } 
+
+#menu p
+{
+    margin-top: 20px;
+    line-height: 30px; 
+    font-size: 30px;    
+}
+
 
 /*Mise en page section footer ----------------------------------------------------*/
 
 footer {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     width: calc(100% - 16px);
     height: 137px;
@@ -217,6 +241,21 @@ a:link
     100% {-webkit-transform: translate(2px,2px);}
 }
 
+@keyframes shake
+{
+    0% {-webkit-transform: translate(2px,2px);}
+    10% {-webkit-transform: translate(-2px, -2px);}
+    20% {-webkit-transform: translate(2px,2px);}
+    30% {-webkit-transform: translate(-2px, -2px);}
+    40% {-webkit-transform: translate(2px,2px);}
+    50% {-webkit-transform: translate(-2px, -2px);}
+    60% {-webkit-transform: translate(2px,2px);}
+    70% {-webkit-transform: translate(-2px, -2px);}
+    80% {-webkit-transform: translate(2px,2px);}
+    90% {-webkit-transform: translate(-2px, -2px);}
+    100% {-webkit-transform: translate(2px,2px);}
+}
+
 .wiggle :hover
 {
     -webkit-animation-name:shake;
@@ -227,27 +266,34 @@ a:link
     animation-iteration-count: infinite ;
 }
 
-@media all  and (min-width: 768px)and (max-width: 1024px) 
+@media all  and (min-width: 786px)and (max-width: 1024px) 
 {
     #bloc_page
     {
-        width: 99%;
+        width: 95%;
     }
     
-    .prix, #dessert
+    #appetit, #plaisir,
+    #gourmandise
     {
-        margin-left: 50px;
-        margin-right: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
     }
-    #menu p
+    
+    hr 
     {
-        margin-top: 0px;
+        width: 400px;
     }
-   
 }
 
 @media all and (max-width: 785px) 
 {
+    header
+    {
+        width: 100%;
+        height: auto;
+     }
    
     #bloc_page
     {
@@ -259,60 +305,64 @@ a:link
     {
         font-size: 3.2em;
     }
-    #appetit, #plaisir,
-#gourmandise
-{
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    margin-bottom: 50px;
-    border: solid black 1px; 
-} 
-#chic
-{
-    height: auto;
-}
     
-    .prix, #dessert
+    #appetit, #plaisir,
+    #gourmandise
     {
-        margin-left: 10px;
-        margin-right: 10px;  
-        font-size: 24px;  
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+    } 
+
+    section
+    { 
+        margin: 10px 15px 50px 15px;
     }
+
+    hr 
+    {
+        width: 300px;
+    }
+
     h2 
     {
-        font-size: 40px;
         height: auto;
+        font-size: 40px;
         text-align: center;
-        margin-top: 10px;
+        margin-top: 30px;
     }
 
     h3  
     {
-        border: solid black 1px; 
+        font-size: 30px;
         margin-top: 10px;  
         margin-bottom: 10px;
     }
-    #menu p
+    #menu p 
     {
-        margin-top: 0px;
+        font-size: 26px;
     }
-    
     .tarif
     {
         width: 20%;
         text-align: end;
     }
     header
-        {
+    {
             width: 100%;
             height: auto;
-        }
-    footer
-    {
-        display: flex;
-        justify-content: center;
-        font-size: 20px;
     }
+
+    
 } 
 
+/*----------------TEST TRAIT-------------------*/
+
+
+   
+    /*
+    -webkit-animation: anim 4s 500ms infinite normal ease-out forwards;
+    animation: anim 4s 500ms infinite normal ease-out forwards; */
+  
+   
+  
