--- a/delice/style_delice.css
+++ b/delice/style_delice.css
@@ -64,8 +64,8 @@ header {
 {
     display: block;
     position: absolute;
-    left: 50px;
-    top: 50px;
+    left: 10px;
+    top: 10px;
     font-size: 45px;
     color: #FDCB46;
     float: left;
@@ -100,20 +100,21 @@ h1 {
     margin-top: 20px;
  }
 
+ section
+ {
+     margin: 0px 50px 100px 50px;
+ }
+
  .prix
  {
      display:flex;
      flex-direction: row;
      justify-content: space-between;
-     margin-left: 100px;
-     margin-right: 100px;
-     font-size: 30px;  
  }
 
 h2
 {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     width: 700px;
     height: 100px;
     font-size: 70px;
@@ -130,63 +131,36 @@ h3:hover
 }
 
 h3
-{
+{ 
     text-align:center;
     font-size: 40px;
 }
-/* Partie insérer un text au milieur d'un trait-------------------------------------------*/
-#hr_commencer, #hr_continuer, #hr_terminer 
+#commencer, #continuer,
+#terminer
 {
     display: flex;
-    align-items: center;
-    text-align: center;
-}
-#hr_commencer::before,
-#hr_commencer::after {
-    /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
-    border-top: 0.2em solid #0228DD;
+    justify-content: space-between;
+    align-items: center;     
+} 
 
-    /* nécessaire pour afficher les pseudo-éléments */
-    content: "";
+hr
+{
+    border: 3px solid;
+    width: 200px;
+    margin-left: 50px;
+    margin-right: 50px;
+} 
 
-    /* partage le reste de la largeur disponible */
-    flex: 1;
-
-    /* espace les traits du texte */
-    margin: 45px 100px;
-}
-#hr_continuer::before,
-#hr_continuer::after {
-    /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
-    border-top: 0.2em solid #0670F3;
-
-    /* nécessaire pour afficher les pseudo-éléments */
-    content: "";
-
-    /* partage le reste de la largeur disponible */
-    flex: 1;
-
-    /* espace les traits du texte */
-    margin: 45px 100px;
-}#hr_terminer::before,
-#hr_terminer::after {
-    /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
-    border-top: 0.2em solid #229DF9;
-
-    /* nécessaire pour afficher les pseudo-éléments */
-    content: "";
-
-    /* partage le reste de la largeur disponible */
-    flex: 1;
-
-    /* espace les traits du texte */
-    margin: 45px 100px;
+#menu p
+{
+    margin-top: 20px;
+    line-height: 30px; 
+    font-size: 30px;    
 }
 
 /*Mise en page section footer ----------------------------------------------------*/
 footer {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     width:calc(100% - 16px);
     height: 137px;
@@ -211,7 +185,6 @@ span
     color: #FDCB46;
 }
 
-
 a:link
 {
     text-decoration: none;
@@ -232,7 +205,20 @@ a:link
     90% {-webkit-transform: translate(-2px, -2px);}
     100% {-webkit-transform: translate(2px,2px);}
 }
-
+@keyframes shake
+{
+    0% {-webkit-transform: translate(2px,2px);}
+    10% {-webkit-transform: translate(-2px, -2px);}
+    20% {-webkit-transform: translate(2px,2px);}
+    30% {-webkit-transform: translate(-2px, -2px);}
+    40% {-webkit-transform: translate(2px,2px);}
+    50% {-webkit-transform: translate(-2px, -2px);}
+    60% {-webkit-transform: translate(2px,2px);}
+    70% {-webkit-transform: translate(-2px, -2px);}
+    80% {-webkit-transform: translate(2px,2px);}
+    90% {-webkit-transform: translate(-2px, -2px);}
+    100% {-webkit-transform: translate(2px,2px);}
+}
 .wiggle :hover
 {
     -webkit-animation-name:shake;
@@ -243,60 +229,81 @@ a:link
     animation-iteration-count: infinite ;
 }
 
-
-
 /* ---------------------------------------------------------------------------------
     Programmation  en responsive 
 ------------------------------------------------------------------------------------*/
 
 
-@media all  and (min-width: 768px)and (max-width: 1024px) 
+@media all  and (min-width: 786px)and (max-width: 1024px) 
 {
     #bloc_page
     {
-        width: 99%;
+        width: 95%;
     }
 
-    .prix p
+    #commencer, #terminer,
+    #continuer
     {
-        margin-top: 10px;
-        margin-bottom: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;  
     }
-
-    #menu
+    
+    hr 
     {
-    margin-bottom: 50px;
-    }
-   
+        width: 400px;
+    } 
 }
 
-@media all and (max-width: 767px) 
+@media all and (max-width: 785px) 
 {
    
+    header
+    {
+        width: 100%;
+        height: auto;
+    }
+
     #bloc_page
     {
-        width: 99%;
+        width: 95%;
+        margin-top: 0px;
+    }
+    h1
+    {
+        font-size: 3.2em;
+    }
+
+    #commencer, #terminer,
+    #continuer
+    {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+    }
+    section
+    { 
+        margin: 10px 15px 50px 15px;
     }
 
     h3 
     {
-        font-size: 50px;
-    /*
-        border-top: black solid 3px;
-        border-bottom: black solid 3px;
-        */
-    }
-   
-    .prix p
-    {
-        margin-top: 10px;
+       font-size: 30px;
+        margin-top: 10px;  
         margin-bottom: 10px;
-        font-size: 40px;
     }
 
-    #menu
+      h2 
     {
-    margin-bottom: 50px;
+        height: auto;
+        font-size: 40px;
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    #menu p
+    {
+        font-size: 26px;
     }
 
     .tarif
