--- a/style.css
+++ b/style.css
@@ -114,6 +114,9 @@ article
     display: flex;
     justify-content:center;
     align-items: center;
+    width: 485px;
+    height: 709px; 
+   
 }
 #note 
 {   
@@ -295,6 +298,22 @@ a:link
     100% {-webkit-transform: translate(2px,2px);}
 }
 
+@keyframes shake
+{
+    0% {-webkit-transform: translate(2px,2px);}
+    10% {-webkit-transform: translate(-2px, -2px);}
+    20% {-webkit-transform: translate(2px,2px);}
+    30% {-webkit-transform: translate(-2px, -2px);}
+    40% {-webkit-transform: translate(2px,2px);}
+    50% {-webkit-transform: translate(-2px, -2px);}
+    60% {-webkit-transform: translate(2px,2px);}
+    70% {-webkit-transform: translate(-2px, -2px);}
+    80% {-webkit-transform: translate(2px,2px);}
+    90% {-webkit-transform: translate(-2px, -2px);}
+    100% {-webkit-transform: translate(2px,2px);}
+}
+
+
 .wiggle :hover
 {
     -webkit-animation-name:shake;
@@ -447,7 +466,7 @@ aside:hover #apres
         margin-bottom: 80px;
     }
 }
-
+/*
 @media all  and (min-width: 1025px)and (max-width: 1439px) 
 {
     section
@@ -472,7 +491,7 @@ aside:hover #apres
         font-size: 6.7em;
     }
 }
-
+*/
 @media all  and (min-width: 786px)and (max-width: 1024px) 
 {
     section
