--- a/style.css
+++ b/style.css
@@ -114,9 +114,10 @@ article
     display: flex;
     justify-content:center;
     align-items: center;
+    box-shadow: 0px 0px 10px 5px #EDEDED ;
     width: 485px;
     height: 709px; 
-   
+    #FBFBFB
 }
 #note 
 {   
