--- a/note/style_note.css
+++ b/note/style_note.css
@@ -37,6 +37,8 @@ Réalisé par Nicolas CHANTEPIE
 }
 /*Fin de déclaration des polices--------------------------------------------------*/
 
+
+
 body
     {
     display:flex;
@@ -44,7 +46,10 @@ body
     color: #3D1319;
     font-family: 'montserrat', Impact, Helvetica, serif ;
 }
+
 /*Mise en page header-------------------------------------------------------------*/
+
+
 header {
     
     display: flex;
@@ -70,7 +75,9 @@ h1 {
     font-size: 8em;
     font-family: 'montserrat-semibold','montserrat', Impact, Helvetica, serif ;
 }
+
 /*Fin de mise en page header------------------------------------------------------*/
+
 
 #bloc_page
 {
@@ -89,8 +96,8 @@ h1 {
 {
     background-color: #FDE1DD;
 }
-/*Mise en page section menu ------------------------------------------------------*/
 
+/*Mise en page section menu ------------------------------------------------------*/
 
 #menu
  {
@@ -109,11 +116,44 @@ h1 {
      justify-content: space-between;  
  }
 
- .tarif
+ h2 
  {
-    width: 10%;
-    text-align: end;  
+     font-size: 60px;
+     text-align: center;
+     font-family: 'devonshire', Impact, Helvetica, serif ;  
  }
+
+#prelude, #point_dorgue,
+#mouvement_final
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;    
+    width: 100%;
+} 
+
+hr
+{
+    border: 3px solid;
+    width: 200px;
+    margin-left: 50px;
+    margin-right: 50px;
+} 
+
+#menu p
+{
+    margin-top: 20px;
+    line-height: 30px; 
+    font-size: 30px;    
+}
+
+.tarif
+{
+    width: 10%;
+    margin-left: 30px;
+    text-align: end;
+}
+
 
 /*----------------Trait animé-------------------*/
 .underline
@@ -132,25 +172,7 @@ h1 {
 }
 /*----------------Fin de l'animation-------------------*/
 
-
-#prelude, #point_dorgue,
-#mouvement_final
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;    
-    width: 100%;
-} 
-
-hr
-{
-    border: 3px solid;
-    width: 275px;
-    margin-left: 50px;
-    margin-right: 50px;
-} 
-
-/*Mise en page header et footer logo*/
+/*Mise en page header logo*/
 #logo
 {
     display: flex;
@@ -188,13 +210,6 @@ hr
     background-image: -webkit-linear-gradient(left, #F15F62, #F6916A);
 }
 
-h2
-{
-    font-size: 65px;
-    text-align: center;
-    font-family: 'devonshire', Impact, Helvetica, serif ; 
-}
-
 p
 {   
     font-size: 26px;    
@@ -203,6 +218,7 @@ p
 /*Fin de mise en page de la section menu -----------------------------------------*/
 
 /*Mise en page section footer ----------------------------------------------------*/
+
 footer {
     display: flex;
     justify-content: space-between;
@@ -213,14 +229,6 @@ footer {
     position: fixed;
     left: 8px;
     bottom: 0px;
-}
-
-.wiggle
-{
-    width: 260px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 span
@@ -234,7 +242,24 @@ a:link
 {
     text-decoration: none;
 }
-/*Fin de mise en page section footer -----------------------------------------------*/
+
+.wiggle
+{
+    width: 260px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wiggle :hover
+{
+    -webkit-animation-name:shake;
+    animation-name:shake;
+    -webkit-animation-duration: 0.8s;
+    animation-duration: 0.8s;
+    -webkit-animation-iteration-count: infinite ;
+    animation-iteration-count: infinite ;
+}
 
 @-webkit-keyframes shake
 {
@@ -266,97 +291,114 @@ a:link
     100% {-webkit-transform: translate(2px,2px);}
 }
 
-.wiggle :hover
-{
-    -webkit-animation-name:shake;
-    animation-name:shake;
-    -webkit-animation-duration: 0.8s;
-    animation-duration: 0.8s;
-    -webkit-animation-iteration-count: infinite ;
-    animation-iteration-count: infinite ;
-}
+/*Fin de mise en page section footer -----------------------------------------------*/
 
-@media all  and (min-width: 768px)and (max-width: 1024px) 
-{
-    #bloc_page
-    {
-        width: 95%;
-    }
-   /* 
-    #prelude, #point_dorgue,
-    #mouvement_final
-    {
-        display: flex;
-        flex-direction: column;
-        align-items: center; 
-    }
+/* ---------------------------------------------------------------------------------
+    Programmation  en responsive 
+------------------------------------------------------------------------------------*/
 
+@media all  and (min-width: 1440px)
+
+{
     hr 
-    {    
-        width: auto;
-    }
-    
-    h3 
     {
-        font-size: 10px;
-        margin-top: 10px;  
-        margin-bottom: 10px;
+        width: 350px;
     }
 
-    .prix, #mouvement_final
-    {
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-
-    #menu p
-    {
-        margin-top: 0px;
-        font-size: 28px;
-    }
-    */
 }
 
-@media all and (max-width: 767px) 
+@media all  and (min-width: 786px)and (max-width: 1024px) 
 {
-   
     header
     {
-        width: 100%;
-        height: auto;
+        height: 150px;
     }
 
     h1
     {
-        font-size: 3.2em;
+        font-size: 4.2em;
+        color: whitesmoke;
     }
 
     #bloc_page
     {
-        width: 99%;
+        width: 95%;
     }
-   #menu p 
-   {
-       font-size: 24px;
-   }
+    
     #prelude, #point_dorgue,
     #mouvement_final
     {
         display: flex;
         flex-direction: column;
         align-items: center; 
-        font-size: 10px;
+    }
+    h2 
+    {
+        font-size: 40px;
+    }
+    hr 
+    {
+        width: 250px;
+    }
+
+    .tarif
+    {
+        margin-left: 20px;
+        width: 20%;
+        text-align: end;
+    }
+    footer
+    {
+        height: 100px;
+        font-size: 20px;
+    }
+
+}
+
+@media all and (max-width: 785px) 
+{
+    header
+    {
+        height: 100px;
+    }
+   
+    .far
+    {
+        font-size: 30px;
+    }
+    h1
+    {
+        font-size: 3.2em;
+    }   
     
-    }
-    #entrée, #plats, #dessert
+    h2 
     {
-        margin-bottom: 40px;
+        font-size: 30px;
     }
-    h3 
+    #bloc_page
     {
-        font-size: 28px;
-        margin-top: 20px;  
-        margin-bottom: 20px;
+        width: 95%;
+        margin-top: 0px;
+    }
+  
+    #prelude, #point_dorgue,
+    #mouvement_final
+    {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+    }
+
+    section
+    { 
+        margin: 10px 15px 50px 15px;
+    }
+  
+    h3  
+    {
+        font-size: 22px;
+        margin-top: 10px;  
+        margin-bottom: 10px;
     }
     #logo
     {
@@ -375,24 +417,24 @@ a:link
        
        
     }
-    .prix, #dessert
+   
+    #menu p 
     {
-        margin-left: 20px;
-        margin-right: 20px;
-  
+        font-size: 22px;
     }
     
     .tarif
     {
         width: 20%;
-        margin-left: 5px;
+        margin-left: 20px;
         text-align: end;
-        border: solid black 1px; 
+    
     }
     
-    header
-        {
-            width: 100%;
-            height: auto;
-        }
+    footer
+    {
+        height: 70px;
+        text-align: center;
+        padding-left: 10px;
+    }
 }
