--- a/chic/style_chic.css
+++ b/chic/style_chic.css
@@ -144,7 +144,7 @@ h2
 hr
 {
     border: 3px solid;
-    width: 200px;
+    width: 150px;
     margin-left: 50px;
     margin-right: 50px;
 } 
@@ -153,7 +153,7 @@ hr
 {
     margin-top: 20px;
     line-height: 30px; 
-    font-size: 28px;    
+    font-size: 26px;    
 }
 
 .tarif
@@ -165,7 +165,7 @@ hr
 #underline1, #underline2, #underline3
 {    
     text-align:center;
-    font-size: 38px; 
+    font-size: 32px; 
     font-family:'crimson', Impact, Helvetica, serif ;
 }
 
@@ -281,9 +281,12 @@ a:link
 {
     hr 
     {
-        width: 350px;
+        width: 250px;
     }
-
+    #underline1, #underline2, #underline3
+    {
+        font-size: 35px;
+    }
 }
 
 
@@ -368,12 +371,16 @@ a:link
 
     hr 
     {
-        width: 280px;
+        width: 250px;
+    }
+
+    #underline1, #underline2, #underline3
+    {
+        font-size: 26px;
     }
 
     h3  
     {
-        font-size: 22px;
         margin-top: 10px;  
         margin-bottom: 10px;
     }
@@ -397,9 +404,12 @@ a:link
     footer
     {
         height: 70px;
-        text-align: center;
-        padding-left: 10px;
     }
+
+    .wiggle span
+        {
+            font-size: 10px;
+        }
 } 
 
    
